Dodano funkcję tworzenia opisu

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,3 +8,12 @@ block content
     input(type="text" id="title" name="title")
     br
     input(type="submit", value="Dodaj")
+
+block content
+  form(action="/tasks/add", method="post")
+    label(for="opis")
+      | Opis zadania
+    br
+    input(type="text" id="opis" name="opis")
+    br
+    input(type="submit", value="Dodaj")
