Edytowano wyświetlanie listy zadań

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,12 +3,9 @@ extends layout
 block content
   form(action="/tasks/add", method="post")
     label(for="title")
-      | Tytuł
- table
+table
     tr
       th(scope= "col") Tytuł
-
-
     each task in tasks
       tr
         td= task.title
@@ -16,6 +13,9 @@ block content
 
 
 
+
+      | Tytuł
+    br
+    input(type="text" id="title" name="title")
     br
     input(type="submit", value="Dodaj")
-
